00 Load Data To Pickle.ipynb

--- a/00 Load Data To Pickle.ipynb
+++ b/00 Load Data To Pickle.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,31 @@
       "data/Mobi\\Mobi_System_Data_2018-02.xlsx\n",
       "data/Mobi\\Mobi_System_Data_2018-03.xlsx\n",
       "data/Mobi\\Mobi_System_Data_2018-04.xlsx\n",
-      "data/Mobi\\Mobi_System_Data_2018-05.xlsx\n"
+      "data/Mobi\\Mobi_System_Data_2018-05.xlsx\n",
+      "data/Mobi\\Mobi_System_Data_2018-06.xlsx\n",
+      "data/Mobi\\Mobi_System_Data_2018-07.xlsx\n",
+      "data/Mobi\\Mobi_System_Data_2018-08.xlsx\n",
+      "data/Mobi\\Mobi_System_Data_2018-09.xlsx\n",
+      "data/Mobi\\Mobi_System_Data_2018-10.xlsx\n",
+      "data/Mobi\\Mobi_System_Data_2018-11.xlsx\n",
+      "data/Mobi\\Mobi_System_Data_2018-12.csv\n",
+      "data/Mobi\\Mobi_System_Data_2019-01.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\yauha\\Anaconda3\\envs\\timeseries\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3049: DtypeWarning: Columns (15) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  interactivity=interactivity, compiler=compiler, result=result)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data/Mobi\\Mobi_System_Data_2019-02.csv\n",
+      "data/Mobi\\Mobi_System_Data_2019-03.csv\n"
      ]
     }
    ],
@@ -77,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,12 +115,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Load Meteorological files into pickle format using functions from https://github.com/vrif/envistaweb-decoder. The weather station that was used was 'Vancouver International Airport #2'.  "
+    "Load Meteorological files into pickle format using functions from https://github.com/vrif/envistaweb-decoder. Specifically, the function `load_AQ_date_excel()` was used. The weather station that was used was 'Vancouver International Airport #2'. The time format of the data is in timezone PST (no daylight savings), as per the BC Air Data Archive website. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,11 +129,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data/weather\\yvr_2017.xls\n",
+      "data/weather\\yvr_2018.xls\n",
+      "data/weather\\yvr_2019.xls\n"
+     ]
+    }
+   ],
    "source": [
-    "file_list = glob.glob(data_folder_weather + '/*.csv')\n",
+    "file_list = glob.glob(data_folder_weather + '/*.xls')\n",
     "\n",
     "combined_df = []\n",
     "\n",
