01 Cleaning the Data.ipynb

--- a/01 Cleaning the Data.ipynb
+++ b/01 Cleaning the Data.ipynb
@@ -188,6 +188,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The goal of the data clean up is to filter out non-representative bike trips on the bike network."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Remove entries with speeds over 60 km/hr and at 0 km/hr"
    ]
   },
@@ -535,7 +542,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1e591e243c8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1e3d3ef7748>"
       ]
      },
      "execution_count": 18,
@@ -803,14 +810,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Loose End"
+    "### Loose Ends"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will be leaving the Account # and Bike # as NAN because will still want to keep the entries for completeness. There is no point in removing them because the reason there is a NA is due to a bugged sensor or software error."
+    "We will be leaving the Account # and Bike # as NAN because will still want to keep the entries for completeness. There is no point in removing them because the reason there is a NA is due to a bugged sensor or software error.\n",
+    "\n",
+    "For the 'Membership Type' data, i am going to fill in the NA values with the corresponding Account ID's top used Membership Type information."
    ]
   },
   {
@@ -861,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -894,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -903,24 +912,211 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Departure</th>\n",
+       "      <th>Return</th>\n",
+       "      <th>Account</th>\n",
+       "      <th>Bike</th>\n",
+       "      <th>Departure station</th>\n",
+       "      <th>Return station</th>\n",
+       "      <th>Membership Type</th>\n",
+       "      <th>Covered distance (m)</th>\n",
+       "      <th>Duration (sec.)</th>\n",
+       "      <th>Departure battery voltage (mV)</th>\n",
+       "      <th>Return battery voltage (mV)</th>\n",
+       "      <th>Departure temperature</th>\n",
+       "      <th>Return temperature</th>\n",
+       "      <th>Stopover duration</th>\n",
+       "      <th>Number of stopovers</th>\n",
+       "      <th>Adj Duration (sec.)</th>\n",
+       "      <th>Average speed (km/h)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2018-01-01</td>\n",
+       "      <td>2018-01-01</td>\n",
+       "      <td>ID00001</td>\n",
+       "      <td>754.0</td>\n",
+       "      <td>0048</td>\n",
+       "      <td>0002</td>\n",
+       "      <td>365 Day Founding Plus</td>\n",
+       "      <td>1382.0</td>\n",
+       "      <td>402</td>\n",
+       "      <td>3715</td>\n",
+       "      <td>3903</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>402</td>\n",
+       "      <td>12.376119</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2018-01-01</td>\n",
+       "      <td>2018-01-01</td>\n",
+       "      <td>ID00002</td>\n",
+       "      <td>517.0</td>\n",
+       "      <td>0093</td>\n",
+       "      <td>0035</td>\n",
+       "      <td>365 Day Founding Standard</td>\n",
+       "      <td>1960.0</td>\n",
+       "      <td>1015</td>\n",
+       "      <td>3645</td>\n",
+       "      <td>3795</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1015</td>\n",
+       "      <td>6.951724</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2018-01-01</td>\n",
+       "      <td>2018-01-01</td>\n",
+       "      <td>ID00003</td>\n",
+       "      <td>231.0</td>\n",
+       "      <td>0071</td>\n",
+       "      <td>0211</td>\n",
+       "      <td>365 Corporate Plus</td>\n",
+       "      <td>624.0</td>\n",
+       "      <td>194</td>\n",
+       "      <td>3650</td>\n",
+       "      <td>3790</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>194</td>\n",
+       "      <td>11.579381</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2018-01-01</td>\n",
+       "      <td>2018-01-01</td>\n",
+       "      <td>ID00004</td>\n",
+       "      <td>1302.0</td>\n",
+       "      <td>0187</td>\n",
+       "      <td>0079</td>\n",
+       "      <td>365 Day Founding Plus</td>\n",
+       "      <td>1756.0</td>\n",
+       "      <td>571</td>\n",
+       "      <td>3686</td>\n",
+       "      <td>3868</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>571</td>\n",
+       "      <td>11.071103</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2018-01-01</td>\n",
+       "      <td>2018-01-01</td>\n",
+       "      <td>ID00005</td>\n",
+       "      <td>1185.0</td>\n",
+       "      <td>0114</td>\n",
+       "      <td>0068</td>\n",
+       "      <td>Archived Monthly Standard</td>\n",
+       "      <td>518.0</td>\n",
+       "      <td>242</td>\n",
+       "      <td>3673</td>\n",
+       "      <td>3774</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>242</td>\n",
+       "      <td>7.705785</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Departure     Return  Account    Bike Departure station Return station  \\\n",
+       "0 2018-01-01 2018-01-01  ID00001   754.0              0048           0002   \n",
+       "1 2018-01-01 2018-01-01  ID00002   517.0              0093           0035   \n",
+       "2 2018-01-01 2018-01-01  ID00003   231.0              0071           0211   \n",
+       "3 2018-01-01 2018-01-01  ID00004  1302.0              0187           0079   \n",
+       "4 2018-01-01 2018-01-01  ID00005  1185.0              0114           0068   \n",
+       "\n",
+       "             Membership Type  Covered distance (m)  Duration (sec.)  \\\n",
+       "0      365 Day Founding Plus                1382.0              402   \n",
+       "1  365 Day Founding Standard                1960.0             1015   \n",
+       "2         365 Corporate Plus                 624.0              194   \n",
+       "3      365 Day Founding Plus                1756.0              571   \n",
+       "4  Archived Monthly Standard                 518.0              242   \n",
+       "\n",
+       "   Departure battery voltage (mV)  Return battery voltage (mV)  \\\n",
+       "0                            3715                         3903   \n",
+       "1                            3645                         3795   \n",
+       "2                            3650                         3790   \n",
+       "3                            3686                         3868   \n",
+       "4                            3673                         3774   \n",
+       "\n",
+       "   Departure temperature  Return temperature  Stopover duration  \\\n",
+       "0                      2                   4                  0   \n",
+       "1                      0                   1                  0   \n",
+       "2                      0                   1                  0   \n",
+       "3                      2                   3                  0   \n",
+       "4                      0                   1                  0   \n",
+       "\n",
+       "   Number of stopovers  Adj Duration (sec.)  Average speed (km/h)  \n",
+       "0                    0                  402             12.376119  \n",
+       "1                    0                 1015              6.951724  \n",
+       "2                    0                  194             11.579381  \n",
+       "3                    0                  571             11.071103  \n",
+       "4                    0                  242              7.705785  "
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "combined_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Export to pickle file.\n",
     "\n",
-    "#outfile = open(pickle_folder + '/' + 'mobi_cleaned.pkl','wb')\n",
-    "#pickle.dump(combined_df, outfile)\n",
-    "#outfile.close()"
+    "outfile = open(pickle_folder + '/' + 'mobi_cleaned.pkl','wb')\n",
+    "pickle.dump(combined_df, outfile)\n",
+    "outfile.close()"
    ]
   }
  ],
