00 Load Data To Pickle.ipynb

--- a/01 Cleaning the Data.ipynb
+++ b/01 Cleaning the Data.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 01 Cleaning the Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Author: Harry Yau\n",
     "\n",
     "Date: Aug 28, 2019"
@@ -162,7 +169,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Adding 2 useful features: Adjusted Duaration and Average Speed."
+    "Adding 2 useful features: Adjusted Duration and Average Speed."
    ]
   },
   {
@@ -281,7 +288,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Peering into the left portion after slimming down the data 0 < km/hr < 60, there appears to be a lot of small values. It appears that these entries have a high covered distance. We are going to leave these entries here for now. In the future these entries will be removed when we look at Covered Distance in a future section."
+    "Peering into the left portion after slimming down the data 0 < km/hr < 60, there appears to be a lot of small values. It appears that these entries have a high covered distance. These entries are not going to be touched here for now. In the future these entries will be removed when Covered Distance is looked at in a future section."
    ]
   },
   {
@@ -368,7 +375,7 @@
    "source": [
     "Duration and seconds # of trips...\n",
     "\n",
-    "Taking a look at the highest value in our data set, this entry is probably not representative of what we want for a typical bike trip. Looking at the box plot, there is some outlier data. I've decided to trim the data down to 3 hours == 10800 seconds."
+    "Taking a look at the highest value in our data set, this entry is probably not representative of a typical bike trip. Looking at the box plot, there are some outlier data. Data that is above 3 hours (10800 seconds) are removed."
    ]
   },
   {
@@ -407,7 +414,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Charts to show after trimming of data."
+    "The following chart is to show after trimming of data."
    ]
   },
   {
@@ -597,7 +604,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When we plot Distance vs Duration, something looks odd. There is a 1:1 line. This is probably bugged data. Before we do so, we are going to remove round trips that were under 90 seconds in duration. This is probably not a reflective trip. Lastly, I also removed trips that went a distance under 100 m. The time duration is over the place, so therefore this could potentially be a bugged sensor. Considering it is only 15,000 entries, this doesn't make a dent to the over data set."
+    "Observing the Distance vs Duration plot, there is a 1:1 line that shows up on the charts. This is probably caused by bugged data. Before the 1:1 line with the bugged data is removed, round trips that were under 90 seconds in duration is removed first. This is an assumption that trips under 90 seconds does not reflect a typical bike trip. Lastly, trips that went a distance under 100 m were removed also."
    ]
   },
   {
@@ -632,7 +639,6 @@
    "outputs": [],
    "source": [
     "# Remove rows where it was a round trip but under 90 seconds. Hence, it wasn't really a bike trip.\n",
-    "\n",
     "mark = (combined_df['Departure station'] == combined_df['Return station'])&( combined_df['Duration (sec.)'] <= 90)\n",
     "combined_df = combined_df[~mark]\n",
     "\n",
@@ -645,7 +651,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Investigating the 1:1 line again. There appears to be a a spike of a number of average speed at 30 km/hr. I'm guessing there is a bug in the odometer and timer."
+    "Investigating the 1:1 line again. There appears to be a a spike of a number of average speed at 30 km/hr and this could probably be a bugged odometer or timer."
    ]
   },
   {
@@ -702,7 +708,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Looking the data set excluding the entries plus and minus 2 km/hr from 30 km/hr, the graph slightly looks better. I made the decision to remove all entries about 26 km/hr, just so the that looks representative of how a typical user may use the bikes."
+    "The decision was made to remove all entries above 26 km/hr, after analyzing a chart where values between 28km/hr and 32 km/hr were removed. Now the data looks representative of how a typical user may use a bike. "
    ]
   },
   {
@@ -817,9 +823,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will be leaving the Account # and Bike # as NAN because will still want to keep the entries for completeness. There is no point in removing them because the reason there is a NA is due to a bugged sensor or software error.\n",
+    "The Account ID and Bike ID will be left as NAN to keep the entries for completeness. There is no need to remove the rows because the reason there is a NaN is due to a bugged sensor or software error that did not record those information.\n",
     "\n",
-    "For the 'Membership Type' data, i am going to fill in the NA values with the corresponding Account ID's top used Membership Type information."
+    "For the 'Membership Type' data, the values that are NaN will be filled with the corresponding Account ID's top used Membership Type information."
    ]
   },
   {
@@ -865,7 +871,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First Replace values where both Account and Membership Type are NaN. We are going to choose '24 hour' as the replacement value because I am assuming these are single trip riders and not a recurrent user. Note: there was only two NA accounts with NA membership type info."
+    "First Replace values where both Account and Membership Type are NaN. Membership Type of '24 hour' was chosen as the replacement value because it is assumed that these are single trip riders and not a recurrent user. Note: there was only two NaN accounts with NaN Membership Type info."
    ]
   },
   {
