--- a/00 Load Data To Pickle.ipynb
+++ b/00 Load Data To Pickle.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 00 Load Data To Pickle"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Author: Harry Yau\n",
     "\n",
     "Date: Aug 28, 2019"
@@ -39,7 +46,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Load Excel and CSV files into pickle format. The data was retrieved from https://www.mobibikes.ca/en/system-data. On retrieval data, only data up to March 2019 was available."
+    "Load Excel and CSV files into pickle format. The data was retrieved from https://www.mobibikes.ca/en/system-data. On the date of data retrieval, only data up to March 2019 was available."
    ]
   },
   {
@@ -124,7 +131,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run ../envistaweb-decoder/envistaweb_decoder.py"
+    "def load_AQ_data_excel(url):\n",
+    "    \n",
+    "    '''\n",
+    "    Imports Hourly XLS files from https://envistaweb.env.gov.bc.ca/DynamicTable2.aspx?G_ID=331\n",
+    "    Please see readme on how to download files from the website.\n",
+    "    This decoder only works with hourly data.\n",
+    "    '''\n",
+    "    \n",
+    "    data = pd.read_excel(url)\n",
+    "    \n",
+    "    data.columns = data.loc[0]\n",
+    "    data.drop(index=[0,1], inplace=True)\n",
+    "    data.drop(index=data[-8:].index, inplace=True) #Removes bottom rows.\n",
+    "    \n",
+    "    for i in range(data.shape[0]):\n",
+    "        if (data['Time'].iloc[i] == '24:00 AM'):\n",
+    "            data['Date'].iloc[i] += pd.DateOffset(1)\n",
+    "        elif (isinstance(data['Time'].iloc[i], datetime.time)):\n",
+    "            data['Date'].iloc[i] += pd.to_timedelta(data['Time'].iloc[i].strftime(\"%H:%M:%S\"))\n",
+    "        else:\n",
+    "            pass\n",
+    "    \n",
+    "    data.drop(columns='Time', inplace=True)\n",
+    "    data['Date'] = pd.to_datetime(data['Date']) #converts to datetime\n",
+    "    data.reset_index(drop=True, inplace=True)\n",
+    "    \n",
+    "    return(data)"
    ]
   },
   {
