03 Exploratory Graphs.ipynb

--- a/03 Exploratory Graphs.ipynb
+++ b/03 Exploratory Graphs.ipynb
@@ -4,9 +4,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 03 Exploratory Graphs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Author: Harry Yau\n",
     "\n",
-    "Date: August 30, 2019"
+    "Date: Sept 1, 2019"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Package that needs to be installed:\n",
+    "- geopandas"
    ]
   },
   {
@@ -85,6 +100,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Plot of All Bike Station Locations"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -121,7 +143,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Trips between stations - Lines"
+    "### Trips Between Bike Stations - Lines"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Patterns start to emerge when the data of the number of bike trips between all possible station-to-station route combinations are visually plotted out. There are heavier bike route traffic within Stanley Park, along the the Seawall, the Downtown core, and the Broadway Corridor. The more frequent bike routes in Stanley Park and the Seawall will most likely correspond with leisure usages. For the Downtown core, and the Broadway Corridor, this is more likely locals using the bike network."
    ]
   },
   {
@@ -136,6 +165,7 @@
     "    Assembles the DataFrame for all bike station combinations \n",
     "    '''\n",
     "\n",
+    "    #Tabulates teh data of Departure and Return Stations.\n",
     "    x = pd.crosstab(stations_df['Departure station'], stations_df['Return station'])\n",
     "    x = x.reindex(index=station_info_df['id'], columns=station_info_df['id'], fill_value=0)\n",
     "\n",
@@ -144,8 +174,6 @@
     "    matrix_count_melt = pd.melt(matrix_count, id_vars='Departure Station', value_vars=station_info_df['id'])\n",
     "    matrix_count_melt['dep_ret'] = matrix_count_melt['Departure Station'] + '-' + matrix_count_melt['id']\n",
     "    matrix_count_melt.columns = ['Departure station', 'Return station', 'value', 'dep_ret'] \n",
-    "\n",
-    "\n",
     "\n",
     "    import itertools\n",
     "    iters = itertools.combinations(station_info_df['id'], 2)\n",
@@ -177,12 +205,14 @@
     "                                              suffixes=('_left', '_right'))\n",
     "\n",
     "\n",
+    "    #I tiled the results by dividing the individual results by the total, then scaling it by 0.8\n",
     "    unique_stn_pairs.sort_values(by = 'total', ascending=False)\n",
     "    unique_stn_pairs['total_pct'] = (unique_stn_pairs['total']/(unique_stn_pairs['total'].max()))*.8\n",
     "\n",
+    "    \n",
+    "    #This assembles the values used to plot the arrows.\n",
     "    temp_df_one = unique_stn_pairs[['lon_conv_right', 'lat_conv_right']]  - np.array(unique_stn_pairs[['lon_conv_left', 'lat_conv_left']])\n",
     "    temp_df_two = unique_stn_pairs[['lon_conv_left', 'lat_conv_left']]  - np.array(unique_stn_pairs[['lon_conv_right', 'lat_conv_right']])\n",
-    "\n",
     "\n",
     "    temp_df_one.columns = ['dx_one', 'dy_one']\n",
     "    temp_df_two.columns = ['dx_two', 'dy_two']\n",
@@ -210,6 +240,9 @@
    "outputs": [],
    "source": [
     "def custom_plot_lines(unique_stn_pairs, station_info_df, title=None):\n",
+    "    '''\n",
+    "    Plots the line graphs between bike stations\n",
+    "    '''\n",
     "    \n",
     "    vancouver_shp = geopandas.read_file(data_folder +'/'+ shp_folder + '/' + 'shoreline2002.shp')\n",
     "    vancouver_bike_shp = geopandas.read_file(data_folder +'/'+ shp_folder + '/' + 'bikeways.shp')\n",
@@ -229,13 +262,6 @@
     "    plt.xlim(488000, 495500)\n",
     "    plt.ylim(5455500, 5462500)\n",
     "    plt.title(title, size=15);"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "It appears that there are certain routes that are have a higher count"
    ]
   },
   {
@@ -261,17 +287,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Trips between stations - With directional arrows"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Trips between stations - With directional arrows"
+    "The results are further narrowed down to look at the bike routes with 2000 trips and above. Directional arrows are included so that the more popular directions, the lines with a darker alpha, can be more easily visualized. This also removes the noise of viewing the less popular routes.\n",
+    "\n",
+    "Stanley Park, the Seawall, the Downtown core and the Broadway Corridor popular routes are more evident. For example, along the Broadway Corridor there is higher bias of bike trips headed towards the Broadway - City Hall Canada Line Station."
    ]
   },
   {
@@ -281,6 +309,9 @@
    "outputs": [],
    "source": [
     "def custom_plot_directional(unique_stn_pairs, station_info_df, target_pair, title=None):\n",
+    "    '''\n",
+    "    Plots the directional arrows between bike stations\n",
+    "    '''\n",
     "    \n",
     "    vancouver_shp = geopandas.read_file(data_folder +'/'+ shp_folder + '/' + 'shoreline2002.shp')\n",
     "    vancouver_bike_shp = geopandas.read_file(data_folder +'/'+ shp_folder + '/' + 'bikeways.shp')\n",
@@ -324,7 +355,7 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -362,7 +393,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After analyzing the directional arrows in the previous section, I decided to label the stations into areas. The rationale for this is to try and capture bike movement information between different regions. For example, there are certain routes where there are disproportionate amount of bike trips due to the area being a tourist location."
+    "After analyzing the directional arrows in the previous section, the stations were then labelled into 16 different regions. The rationale for this is to try and capture bike movement information between different regions. Doing a 16 label region classification is more computationally  feasible than a 192 label station classification task. For example, there are certain routes where there are a disproportionate amount of bike trips due to the area being located in a tourist area."
    ]
   },
   {
@@ -492,6 +523,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Other Exploratory Graphs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Membership Type is grouped by similar pass types. This will be used in the next jupyter notebook as a feature.\n",
+    "\n",
+    "There is a larger proportion of 'Daily Type' users during the summer time frame. This most likely corresponds with tourist usage. The interesting part I noticed is that the 'Monthly Type' proportion has been decreasing. This could probably mean a conversion to the '365 Type' of membership. Either that or the 90 Day Pass wasn't as popular. As of writing this analysis, Mobi Bike seems to have phased out the 90 Day Pass and created a new 30 Day Pass type of membership. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
@@ -547,99 +594,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th>Membership Group</th>\n",
-       "      <th>365_Type</th>\n",
-       "      <th>Daily</th>\n",
-       "      <th>Monthly</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Departure</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2017-01-01</th>\n",
-       "      <td>82.0</td>\n",
-       "      <td>28.0</td>\n",
-       "      <td>38.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-01-02</th>\n",
-       "      <td>111.0</td>\n",
-       "      <td>69.0</td>\n",
-       "      <td>60.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-01-03</th>\n",
-       "      <td>204.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>98.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-01-04</th>\n",
-       "      <td>222.0</td>\n",
-       "      <td>29.0</td>\n",
-       "      <td>119.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-01-05</th>\n",
-       "      <td>272.0</td>\n",
-       "      <td>19.0</td>\n",
-       "      <td>126.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Membership Group  365_Type  Daily  Monthly\n",
-       "Departure                                 \n",
-       "2017-01-01            82.0   28.0     38.0\n",
-       "2017-01-02           111.0   69.0     60.0\n",
-       "2017-01-03           204.0    2.0     98.0\n",
-       "2017-01-04           222.0   29.0    119.0\n",
-       "2017-01-05           272.0   19.0    126.0"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "new_t.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -661,6 +619,13 @@
     "ax.set_ylabel('# of Bike Trips', fontsize=15)\n",
     "ax.set_title('Daily Bike Trips by Membership Group', fontsize=15)\n",
     "ax.legend(title='Membership Group', title_fontsize=15, fontsize=15);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following is a proportional version of the previous chart."
    ]
   },
   {
