03 Exploratory Graphs.ipynb

--- a/03 Exploratory Graphs.ipynb
+++ b/03 Exploratory Graphs.ipynb
@@ -20,8 +20,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Package that needs to be installed:\n",
-    "- geopandas"
+    "Packages that needs to be installed:\n",
+    "- geopandas\n",
+    "- pyproj"
    ]
   },
   {
