--- a/04 Region Classification.ipynb
+++ b/04 Region Classification.ipynb
@@ -21,8 +21,10 @@
    "metadata": {},
    "source": [
     "Packages that needs to be installed:\n",
-    "- CatBoost\n",
-    "- geopandas"
+    "- catboost\n",
+    "- lightgbm\n",
+    "- geopandas\n",
+    "- pyproj"
    ]
   },
   {
@@ -425,6 +427,20 @@
     "def custom_predict(model, X_train, X_valid, X_test, y_scaler=None, NN_conv=False, proba=False, reshape=False):\n",
     "    '''\n",
     "    Uses the predict method for a model on the train valid and test set.\n",
+    "    \n",
+    "    Arguments:\n",
+    "    model - a fitted model object using the sklearn fit\n",
+    "    X_train - A Pandas DataFrame of the training data set\n",
+    "    X_valid - A Pandas DataFrame of the validation data set\n",
+    "    X_test - A Pandas DataFrame of the testing data set \n",
+    "    y_scaler - The scaler from sklearn.preprocessing. This is needed if you are predicting results from a Neural Network\n",
+    "    NN_conv - A boolean value, to convert softmax probability to a binary value\n",
+    "    proba - A boolean value, returns the probability instead\n",
+    "    reshape - A boolean value, rehapes a non-standard prediction output\n",
+    "    \n",
+    "    Returns:\n",
+    "    y_pred_list - Returns an array of the predicted results with dimensions [3, ?] --> [Training, Validation, Testing]\n",
+    "    \n",
     "    '''\n",
     "    \n",
     "    X_list = [X_train, X_valid, X_test]\n",
@@ -455,6 +471,16 @@
     "def custom_model_score(y_pred_list, y_train, y_valid, y_test, ctype='Regression'):\n",
     "    '''\n",
     "    Calculates the RMSE and R2 metrics\n",
+    "    \n",
+    "    Arguments:\n",
+    "    y_pred_list - Input results from the custom function, 'custom_predict()'\n",
+    "    y_train - An array of actual y_train values\n",
+    "    y_valid - An array of actual y_valid values\n",
+    "    y_test -  An array of actual y_test values\n",
+    "    ctype - The choices are 'Regression' and 'Classification'\n",
+    "    \n",
+    "    Returns:\n",
+    "    score_output - Outputs an array of RMSE and R2 for each individual set of data.\n",
     "    '''\n",
     "    \n",
     "    import math\n",
@@ -492,10 +518,18 @@
     "\n",
     "def custom_score_display(the_score, index=None, ctype='Regression'):\n",
     "    \n",
+    "     '''\n",
+    "    Adds columns names and index names to display results from 'custom_model_score()' look pretty.\n",
+    "    \n",
+    "    Arguments:\n",
+    "    the_score - Can either supply a list of score_outputs from 'customer_model_score()' or individual scores.\n",
+    "    index - If a list of score_outputs are supplied, must supply a corresponding list index that is the name of the algorithms.\n",
+    "    ctype - The choices are 'Regression' and 'Classification'\n",
+    "    \n",
+    "    Returns\n",
+    "    output_score - A pretty looking Pandas DataFrame\n",
     "    '''\n",
-    "    If a list of index is provided, it will expect the first argument to be a list to create a combined score.\n",
-    "    '''\n",
-    "\n",
+    "        \n",
     "    if index is None:\n",
     "        output_score  = pd.DataFrame([the_score])\n",
     "    else:\n",
@@ -523,8 +557,15 @@
    "outputs": [],
    "source": [
     "def custom_confusion_matrix(y_actual, y_predicted, region_label_df):\n",
+    "    \n",
     "    '''\n",
     "    Plots the confustion matrix\n",
+    "    \n",
+    "    Arguments:\n",
+    "    y_actual - An array of actual y values\n",
+    "    y_predicted - An array of predicted y values\n",
+    "    region_label_df - A DataFrame with the region information\n",
+    "    \n",
     "    '''\n",
     "        \n",
     "    cm = pd.crosstab(y_actual, y_predicted)\n",
@@ -544,8 +585,16 @@
     "#train and valid has scrambled indexes. Need to regrab the 'Region Departure' information with the correct index or else the tabulation will be incorrect\n",
     "\n",
     "def custom_departure_return_matrix(y_actual_departure, y_actual_return, y_predicted, region_label_df, model_name=None):\n",
+    "    \n",
     "    '''\n",
     "    Plots the matrix that tabulates the actual departure station location with the actual or predicted return station location.\n",
+    "    \n",
+    "    Arguments:\n",
+    "    y_actual_departure - An array of actual y values for departure stations\n",
+    "    y_actual_return - An array of actual y values for return stations\n",
+    "    y_predicted - An array of predicted y values\n",
+    "    region_label_df - A DataFrame with the region information\n",
+    "    model_name - Receives a text value to set the title name. Defaults to 'None'.\n",
     "    '''\n",
     "    \n",
     "    g, (ax1, ax2) = plt.subplots(1,2, sharex=False, sharey=True, figsize=(18,10))\n",
@@ -1714,7 +1763,9 @@
    "source": [
     "After running the numbers, it appears that the more complex models do better in understanding the interactions between the features. For example when looking at a simple linear model such as a Support Vector Machine, the accuracy score was only 30.2%. When you analyze the tabulation table, the model appears to consistently forecast certain return regions due to high bias in the dataset. There are more predicted ending regions with value zero compared to the actual results. Contrasting this to a more complex model like a Neural Network, the results of the tabulation data are more dispersed. The high bias in the dataset is still apparent in a more complex model, but it was able to learn the interactions of the features differently to generate a different looking tabulation table. \n",
     "\n",
-    "The downside is that a complex Neural Network is not easily interpretable. A Neural Network is essentially a black box, and the only way to analyze this type of model is to introduce features to it one at a time to see the results. If the accuracy score becomes stagnant, then this could mean that one should proably add more features for the model to learn. This is apparent in the second Neural Network that was tested, where there were 2 hiddens layers. One of the layer has 1024 neurons and the other have 512 neurons. Multiple layers only increased the accuracy score by 0.50%. Not enough to justify adding more layers to a Neural Network.\n",
+    "The downside is that a complex Neural Network is not easily interpretable. A Neural Network is essentially a black box, and the only way to analyze this type of model is to introduce features to it one at a time to see the results. If the accuracy score becomes stagnant, then this could mean that one should proably add more features for the model to learn. This is apparent in the second Neural Network that was tested, where there were 2 hiddens layers. One of the layer has 1024 neurons and the other have 512 neurons. Multiple layers only increased the accuracy score by 0.50%. However, there is a  2% increase in the Precision and 1% increase in the Recall. Even though the accuracy increases only a little bit, but adding more layers appear to help with the Precision and Recall scores.\n",
+    "\n",
+    "To keep this in perspective, there is only a 6.25% of randomly guessing 1 of 16 return regions correctly. The simple and complex models have accuracy scores that ranges between 30% to 37%. This is huge improvement over random chance.\n",
     "\n",
     "Therefore, there appears to be value in utilizing a more complex model because it is able to learn differently than a more simple model. Future investigation is needed to fine tune the model."
    ]
